# laboratory_1_c_plus_plus_2023

./: CMakeLists.txt  beginning.h  checking_errors.cpp  checking_errors.h  file_errors.cpp  greeting.cpp  input.cpp  input.h  main.cpp  menu.cpp  saving_files.cpp  saving_files.h  substring_search.cpp  substring_search.h  test.cpp  test.h
